# SFMLGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: Linter.yml
Engine/: .clang-format
Engine/Include/: EnginePCH.h  Umbra.h  sfmlHelper.h
Engine/Include/Asset/: AssetManager.h  AssetRegister.h  IResource.h  Texture.h  TextureResource.h
Engine/Include/Core/: App.h  AppWindow.h  Clock.h  Event.h  Singleton.h
Engine/Include/Diag/: Assert.h  Logger.h
Engine/Include/ECS/: Component.h  Component.inl  ECSConfig.h  ECSRegister.h  ECSRegister.inl  Enity.h  EnityManager.inl  System.h  View.h
Engine/Include/ECS/Components/: LifeTime.h  SpriteQuad.h  Transfrom.h
Engine/Include/ECS/Systems/: LifeTimeSystem.h  RenderSystem.h  RotationSystem.h
Engine/Include/Game/: IGameInstance.h
Engine/Include/Input/: Input.h
Engine/Include/Math/: Vector.h
Engine/Include/Types/: SparseArray.h
Engine/include/App/: App.h  AppWindow.h
Engine/include/Common/: Common.h
Engine/include/Core/: Singleton.h
Engine/include/ECS/: ECS.h
Engine/include/Game/: GameInstance.h  GameWorld.h  SceneEntity.h
Engine/include/Log/: Logger.h
Engine/src/: main.cpp
Engine/src/App/: App.cpp  AppWindow.cpp
Engine/src/Asset/: AssetManager.cpp  Texture.cpp
Engine/src/Core/: App.cpp  AppWindow.cpp  Entry.cpp
Engine/src/Diag/: Logger.cpp
Engine/src/Game/: GameInstance.cpp  GameWorld.cpp
Engine/src/Input/: Input.cpp
Engine/src/Log/: Logger.cpp
Sandbox/SimpleSandbox/src/: SimpleApp.cpp
Sandbox/SimpleSandbox/src/Game/: SimpleGameInstance.cpp  SimpleGameInstance.h
